Add schema config Add package.json settings Add gulp config Add react component

--- a/assets/base.css
+++ b/assets/base.css
@@ -2729,8 +2729,7 @@ details-disclosure > details {
 }
 
 .gradient {
-  background: rgb(var(--color-background));
-  background: var(--gradient-background);
+  background-color: rgb(var(--color-base-accent-2));
   background-attachment: fixed;
 }
 
