--- a/components/content-cards/section-content-cards.scss
+++ b/components/content-cards/section-content-cards.scss
@@ -1,25 +1,6 @@
 .content-cards {
   padding: 3.9rem 0;
 
-  h2 {
-    font-size: 8rem;
-    line-height: 8rem;
-    text-align: center;
-    color: rgb(var(--color-foreground));
-    margin-top: 0;
-    margin-bottom: 6rem;
-  }
-
-  &__wrap {
-    display: grid;
-    gap: 1rem;
-    grid-template-columns: 1fr 1fr;
-
-    @media screen and (min-width: 990px) {
-      grid-template-columns: 1fr 1fr 1fr 1fr;
-    }
-  }
-
   &__box {
     padding: 1rem;
 
@@ -34,16 +15,20 @@
     font-size: 3.2rem;
     line-height: 3.2rem;
     text-align: center;
+    font-weight: 400;
     color: rgb(var(--color-base-text));
     padding-bottom: 1rem;
+    font-family: var(--font-heading);
   }
 
   &__subtitle {
     font-size: 1.4rem;
     line-height: 1.8rem;
     text-align: center;
+    font-weight: 400;
     color: rgb(var(--color-base-text));
-    padding: 0 2rem 1.7rem 2rem;
+    font-family: var(--font-heading);
+    padding: 0 1.7rem 1.7rem 1.7rem;
   }
 
   &__link {
@@ -55,5 +40,6 @@
     letter-spacing: 0.25rem;
     text-transform: uppercase;
     display: block;
+    font-family: var(--font-link);
   }
 }
