--- a/components/posters/section-posters.scss
+++ b/components/posters/section-posters.scss
@@ -17,6 +17,7 @@
     img {
       width: 100%;
       height: auto;
+      display: block;
     }
   }
 
@@ -26,6 +27,7 @@
     text-align: center;
     color: rgb(var(--color-base-text));
     padding-bottom: 2rem;
+    font-family: var(--font-heading);
 
     @media screen and (min-width: 990px) {
       font-size: 6.4rem;
@@ -52,6 +54,7 @@
     position: absolute;
     bottom: 0;
     padding: 3.1rem 2.5rem;
+    width: 100%;
 
     @media screen and (min-width: 990px) {
       padding: 4rem 3rem;
