--- a/sections/posters.liquid
+++ b/sections/posters.liquid
@@ -1,4 +1,4 @@
-{{ 'section-posters.css' | asset_url | stylesheet_tag }}
+{{ 'section-posters.min.css' | asset_url | stylesheet_tag }}
 
 <div class="posters">
   <div class="page-width">
