--- a/components/featured-products/section-featured-products.scss
+++ b/components/featured-products/section-featured-products.scss
@@ -1,17 +1,82 @@
-.featured-products {
-  padding: 3.9rem 0;
+@import '../mixins/_breackpoints.scss';
 
-  h2 {
-    font-size: 8rem;
-    line-height: 8rem;
-    text-align: center;
-    color: rgb(var(--color-foreground));
-    margin-top: 0;
-    margin-bottom: 6rem;
-    font-family: var(--font-heading);
+.featured-products {
+  padding: 3rem 0;
+  overflow: hidden;
+  position: relative;
+
+  @include from-md {
+    overflow: visible;
+    padding: 3.9rem 0;
+  }
+
+  &::before,
+  &::after {
+    position: absolute;
+    content: '';
+    z-index: 2;
+    width: 3rem;
+    height: 100%;
+    top: 0;
+  }
+
+  &::before {
+    left: 0;
+    background-image: linear-gradient(90deg, #F4EDE5 0%, rgba(244, 237, 229, 0) 100%);
+
+    @include from-md {
+      display: none;
+    }
+  }
+
+  &::after {
+    right: 0;
+    background-image: linear-gradient(270deg, #F4EDE5 0%, rgba(244, 237, 229, 0) 100%);
+
+    @include from-md {
+      display: none;
+    }
   }
 
   &__wrap {
     display: flex;
+    overflow: visible;
+    margin: 0;
+
+    @include from-md {
+      margin: 0 5rem;
+      overflow: hidden;
+    }
   }
+
+  .item {
+    display: flex;
+    flex-direction: column;
+
+    &__information {
+      flex: 1;
+    }
+  }
+}
+
+[data-featured-products] {
+  position: relative;
+}
+
+.button-prev-featured,
+.button-next-featured {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  display: none;
+  cursor: pointer;
+
+  @include from-md {
+    display: block;
+  }
+}
+
+.button-next-featured {
+  right: 0;
+  left: auto;
 }
