--- a/components/posters/section-posters.scss
+++ b/components/posters/section-posters.scss
@@ -1,3 +1,5 @@
+@import '../mixins/_breackpoints.scss';
+
 .posters {
   padding: 3.9rem 0;
 
@@ -6,7 +8,7 @@
     gap: 1rem;
     grid-template-columns: 1fr;
 
-    @media screen and (min-width: 990px) {
+    @include from-md {
       grid-template-columns: 1fr 1fr;
     }
   }
@@ -29,7 +31,7 @@
     padding-bottom: 2rem;
     font-family: var(--font-heading);
 
-    @media screen and (min-width: 990px) {
+    @include from-md {
       font-size: 6.4rem;
       line-height: 6.4rem;
     }
@@ -44,7 +46,7 @@
     text-transform: uppercase;
     display: block;
 
-    @media screen and (min-width: 990px) {
+    @include from-md {
       font-size: 1.6rem;
       line-height: 1.6rem;
     }
@@ -56,7 +58,7 @@
     padding: 3.1rem 2.5rem;
     width: 100%;
 
-    @media screen and (min-width: 990px) {
+    @include from-md {
       padding: 4rem 3rem;
     }
   }
