--- a/sections/featured-products.liquid
+++ b/sections/featured-products.liquid
@@ -1,5 +1,5 @@
 {{ 'section-featured-products.min.css' | asset_url | stylesheet_tag }}
-<script src="{{ 'FeaturedProducts.min.js' | asset_url }}" defer="defer"></script>
+<script src="{{ 'featured_products.min.js' | asset_url }}" defer="defer"></script>
 
 <script type="application/json" data-featured-products-settings="{{ section.id }}">
   {
@@ -10,7 +10,8 @@
           "price": {{ product.price | json }},
           "featured_image": {{ product.featured_image | json }},
           "handle": {{ product.handle | json }},
-          "id": {{ product.id | json }}
+          "id": {{ product.id | json }},
+          "variant": {{ product.selected_or_first_available_variant | json }}
         }
         {%- unless forloop.last -%},{%- endunless -%}
       {%- endfor -%}
@@ -18,36 +19,36 @@
   }
 </script>
 
-
 <div class="featured-products">
   <div class="page-width">
-    <h2 class="heading">PARTY A LA CARTE</h2>
+    {%- if section.settings.heading != blank -%}
+      <h2 class="heading">{{ section.settings.heading | escape }}</h2>
+    {%- endif -%}
     <div data-featured-products data-id="{{ section.id }}"></div>
   </div>
 </div>
 
-
 {% schema %}
 {
-  "name": "Featured products",
+  "name": "t:sections.featured-products.name",
   "tag": "section",
   "class": "section",
   "settings": [
     {
       "type": "text",
       "id": "heading",
-      "default": "HAVING FUN 101",
-      "label": "t:sections.content-cards.settings.heading.label"
+      "label": "t:sections.featured-products.settings.heading.label",
+      "default": "HAVING FUN 101"
     },
     {
       "type": "product_list",
       "id": "products",
-      "label": "t:sections.content-cards.blocks.card.name"
+      "label": "t:sections.featured-products.settings.products.label"
     }
   ],
   "presets": [
     {
-      "name": "Featured products"
+      "name": "t:sections.featured-products.name"
     }
   ]
 }
