--- a/sections/posters.liquid
+++ b/sections/posters.liquid
@@ -55,53 +55,53 @@
   "blocks": [
     {
       "type": "poster",
-      "name": "t:sections.posters.blocks.card.name",
+      "name": "t:sections.posters.blocks.poster.name",
       "limit": 2,
       "settings": [
         {
           "type": "image_picker",
           "id": "image",
-          "label": "t:sections.posters.blocks.card.settings.image.label"
+          "label": "t:sections.posters.blocks.poster.settings.image.label"
         },
         {
           "type": "text",
           "id": "title",
-          "label": "t:sections.posters.blocks.card.settings.title.label",
+          "label": "t:sections.posters.blocks.poster.settings.title.label",
           "default": "Poster"
         },
         {
           "type": "color",
           "id": "color_title",
-          "label": "t:sections.posters.blocks.card.settings.color_title.label",
+          "label": "t:sections.posters.blocks.poster.settings.color_title.label",
           "default": "#fff"
         },
         {
           "type": "header",
-          "content": "t:sections.posters.blocks.card.settings.button.header"
+          "content": "t:sections.posters.blocks.poster.settings.button.header"
         },
         {
           "type": "text",
           "id": "button",
-          "label": "t:sections.posters.blocks.card.settings.button.label",
+          "label": "t:sections.posters.blocks.poster.settings.button.label",
           "default": "shop the scene"
         },
         {
           "type": "color",
           "id": "color_button",
-          "label": "t:sections.posters.blocks.card.settings.color_button.label",
+          "label": "t:sections.posters.blocks.poster.settings.color_button.label",
           "default": "#fff"
         },
         {
           "type": "url",
           "id": "link",
-          "label": "t:sections.posters.blocks.card.settings.link.label"
+          "label": "t:sections.posters.blocks.poster.settings.link.label"
         }
       ]
     }
   ],
   "presets": [
     {
-      "name": "t:sections.posters.presets.name",
+      "name": "t:sections.posters.name",
       "blocks": [
         {
           "type": "poster"
