--- a/assets/base.css
+++ b/assets/base.css
@@ -216,7 +216,7 @@ html.no-js .no-js-hidden {
 .page-width {
   max-width: var(--page-width);
   margin: 0 auto;
-  padding: 0 1.5rem;
+  padding: 0 1rem;
 }
 
 .page-width-desktop {
@@ -226,7 +226,7 @@ html.no-js .no-js-hidden {
 
 @media screen and (min-width: 750px) {
   .page-width {
-    padding: 0 5rem;
+    padding: 0 4rem;
   }
 
   .page-width--narrow {
@@ -2147,7 +2147,7 @@ input[type='checkbox'] {
   align-items: center;
   font-size: 0.9rem;
   bottom: 0.8rem;
-  left: 2.2rem;
+  left: 1.2rem;
   line-height: calc(1 + 0.1 / var(--font-body-scale));
 }
 
@@ -2227,8 +2227,8 @@ input[type='checkbox'] {
 
 .header {
   display: grid;
-  grid-template-areas: 'left-icon heading icons';
-  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-areas: 'heading icons left-icon';
+  grid-template-columns: 2fr auto auto;
   align-items: center;
 }
 
@@ -2243,8 +2243,8 @@ input[type='checkbox'] {
 
   .header--middle-left {
     grid-template-areas: 'heading navigation icons';
-    grid-template-columns: auto auto 1fr;
-    column-gap: 2rem;
+    grid-template-columns: auto 1fr auto;
+    column-gap: 1.5rem;
   }
 
   .header--top-center {
@@ -2302,6 +2302,7 @@ input[type='checkbox'] {
   .header__heading,
   .header__heading-link {
     text-align: center;
+    justify-self: flex-start;
   }
 }
 
@@ -2327,6 +2328,14 @@ input[type='checkbox'] {
   display: flex;
   grid-area: icons;
   justify-self: end;
+  margin-top: -0.6rem;
+}
+
+@media screen and (max-width: 989px) {
+  .header__icons {
+    margin-right: 3.8rem;
+    margin-top: -0.4rem;
+  }
 }
 
 .header__icon:not(.header__icon--summary),
@@ -2354,22 +2363,27 @@ input[type='checkbox'] {
 }
 
 .header__icon .icon {
-  height: 2rem;
-  width: 2rem;
+  height: 2.1rem;
+  width: 1.6rem;
   fill: none;
   vertical-align: middle;
 }
 
+.header__icon .icon.icon-search {
+  height: 2rem;
+  width: 2rem;
+}
 .header__icon,
 .header__icon--cart .icon {
-  height: 4.4rem;
-  width: 4.4rem;
   padding: 0;
 }
 
 .header__icon--cart {
   position: relative;
-  margin-right: -1.2rem;
+}
+
+.header__icon--margin {
+  margin-left: 2.567rem;
 }
 
 @media screen and (max-width: 989px) {
@@ -2406,6 +2420,12 @@ menu-drawer + .header__search {
 .header__search {
   display: inline-flex;
   line-height: 0;
+}
+
+@media screen and (max-width: 989px) {
+  .header__search {
+    margin-top: 0.2rem;
+  }
 }
 
 .header--top-center > .header__search {
@@ -2570,7 +2590,8 @@ details[open] > .header__submenu {
 
 @media screen and (min-width: 990px) {
   .header__inline-menu {
-    display: block;
+    display: flex;
+    justify-content: flex-end;
   }
 
   .header--top-center .header__inline-menu {
@@ -2591,9 +2612,16 @@ details[open] > .header__submenu {
 }
 
 .header__menu-item {
-  padding: 1.2rem;
+  padding: 1.75rem;
   text-decoration: none;
-  color: rgba(var(--color-foreground), 0.75);
+  color: rgba(var(--color-foreground));
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.4rem;
+  line-height: 1.4rem;
+  letter-spacing: 0.25em;
+  text-transform: uppercase;
+  font-family: var(--font-link);
 }
 
 .header__menu-item:hover {
