--- a/snippets/icon-hamburger.liquid
+++ b/snippets/icon-hamburger.liquid
@@ -1,3 +1,5 @@
-<svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" role="presentation" class="icon icon-hamburger" fill="none" viewBox="0 0 18 16">
-  <path d="M1 .5a.5.5 0 100 1h15.71a.5.5 0 000-1H1zM.5 8a.5.5 0 01.5-.5h15.71a.5.5 0 010 1H1A.5.5 0 01.5 8zm0 7a.5.5 0 01.5-.5h15.71a.5.5 0 010 1H1a.5.5 0 01-.5-.5z" fill="currentColor">
+<svg width="24" height="15" viewBox="0 0 24 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+  <line x1="0.669434" y1="0.5" x2="22.6694" y2="0.5" stroke="black"/>
+  <line x1="0.669434" y1="7.5" x2="22.6694" y2="7.5" stroke="black"/>
+  <line x1="0.669434" y1="14.5" x2="22.6694" y2="14.5" stroke="black"/>
 </svg>
