Adding style and functionality for header Fixing style for section-content-cards.scss Fixing style for section-featured-products.scss Fixing style for section-posters.scss

--- a/components/content-cards/section-content-cards.scss
+++ b/components/content-cards/section-content-cards.scss
@@ -91,4 +91,25 @@
       }
     }
   }
+
+  .button-prev-cards,
+  .button-next-cards {
+    position: absolute;
+    top: 50%;
+    z-index: 5;
+    right: 1rem;
+    left: auto;
+    margin-top: -3rem;
+
+    &.swiper-button-disabled {
+      display: none;
+    }
+  }
+
+  .button-prev-cards {
+    left: 1rem;
+    right: auto;
+    transform: rotate(180deg);
+  }
 }
+
