--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -33,6 +33,14 @@
     margin-right: 0.5rem;
   }
 
+  @media screen and (max-width: 989px) {
+      header-drawer {
+          justify-self: start;
+          margin-left: -1.1rem;
+          margin-right: 1rem;
+      }
+  }
+
   .header__heading-logo {
     max-width: {{ section.settings.logo_width }}px;
   }
