--- a/components/content-cards/section-content-cards.scss
+++ b/components/content-cards/section-content-cards.scss
@@ -101,6 +101,10 @@
     left: auto;
     margin-top: -3rem;
 
+    @include from-md {
+      display: none;
+    }
+
     &.swiper-button-disabled {
       display: none;
     }
